--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,98 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, this is my website!</h1>
-    <p>
-      With his customized Mandalorian armor, deadly weaponry, and silent demeanor, Boba Fett was one of the most feared bounty hunters in the galaxy. A genetic clone of his 'father,' bounty hunter Jango Fett, Boba learned combat and martial skills from a young age.
-    </p>
-    <p>
-      Grogu, colloquially referred to as Baby Yoda, is a character from the Star Wars Disney+ original television series The Mandalorian. He is a toddler member of the same unnamed species as the Star Wars characters Yoda and Yaddle, with whom he shares a strong ability in the Force.
-    </p>
-    <p>
-      <a href="https://starwars.com/">Go to StarWars.com</a>
-    </p>
-  </body>
+    <title>Kwitter - The Kellogg Social Hub</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .jumbotron {
+            background: url('https://source.unsplash.com/1600x900/?social,network') no-repeat center center;
+            background-size: cover;
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+            position: relative;
+        }
+        .jumbotron::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+        }
+        .jumbotron .content {
+            position: relative;
+            z-index: 1;
+        }
+        .jumbotron h1 {
+            font-size: 4rem;
+            font-weight: bold;
+        }
+        .footer {
+            background-color: #f8f9fa;
+            padding: 20px 0;
+        }
+    </style>
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Kwitter</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                </ul>
+                <a class="btn btn-light text-primary" href="#">Join Now</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+        <div class="content">
+            <h1>Kwitter</h1>
+            <p class="lead">Your exclusive social space at Kellogg. Stay connected, stay engaged.</p>
+        </div>
+    </div>
+
+    <!-- Benefits Section -->
+    <div class="container mt-5">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <h3>See what your Kellogg friends are up to</h3>
+                <p>Get real-time updates from your classmates, join discussions, and stay in the loop with what's happening in the Kellogg community.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>It's exclusive to Kellogg students</h3>
+                <p>No random trolls, no outsiders—just the people you know and trust from Kellogg, creating a more authentic and engaging experience.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>It's not Twitter</h3>
+                <p>No distractions, no drama—just meaningful conversations and updates that matter to you as a Kellogg student.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer mt-5">
+        <div class="container d-flex justify-content-between">
+            <p class="mb-0">&copy; 2025 Kwitter. All rights reserved.</p>
+            <ul class="list-inline mb-0">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">About Us</a></li>
+                <li class="list-inline-item"><a href="#">Register</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
